turning in lab 18

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
 <body>
 <div>
     <h1>CodeFellowship</h1>
-    <p>CodeFellowship is a site that allows users to connect throughout their journey learning to code. /br
+    <p>CodeFellowship is a site that allows users to connect throughout their journey learning to code. </br>
     This allows everyone to know that we are all in the same boat, provide support to each other and learn from one another!
     </p>
 </div>
