--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -12,7 +12,7 @@
         <input type="text" name="firstName" required placeholder="First Name"/>
         <input type="text" name="lastName" required placeholder="Last Name"/>
         <input type="date" name="dateOfBirth" required placeholder="Date of Birth"/>
-        <input type="text" name="bio" required placeholder="Bio"/>
+        <input type="text" name="bio" required placeholder="Bio" width="45" height="15"/>
         <button type="submit">Submit</button>
     </form>
 </div>
