accidentally pushed work from today into yesterdays pull request and merged it...making a comment change and then creating a new pull request for turn in

--- a/src/main/resources/templates/userInfo.html
+++ b/src/main/resources/templates/userInfo.html
@@ -21,6 +21,7 @@
         <li th:text="${userInfo.bio}"/>
     </ul>
 <!--    create a form for posting on here... this is from lab17-->
+<!--    Posting should live within the user interface-->
 
 
 
