having trouble getting the post database working

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
+    <nav>
+        <a href="/signup">Signup</a>
+        <a href="/login">Login</a>
+    </nav>
 <div>
     <h1>CodeFellowship</h1>
     <p>CodeFellowship is a site that allows users to connect throughout their journey learning to code. </br>
