--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,6 +5,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
+    <nav>
+        <a href="/">Home</a>
+        <a href="/signup">Signup</a>
+    </nav>
 <div>
     <form action="/login" method="post">
         <input type="text" name="username" required placeholder="Username"/>
